fixed the overflow problem/scroll bar vertical by index.css overflow-x: hidden

--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -1,7 +1,8 @@
 .contact-container {
     background-color: var(--accent-color);
     padding: 1rem 8rem;
-    margin: auto;
+    width: 100vw;
+    margin: 0;
     padding-bottom: 50px;
 }
 
@@ -17,7 +18,6 @@
     font-size: 1.25rem;
     text-align: left;
     padding: 1rem;
-    /* padding: 25px; */
     width: 50vw;
 }
 
